dx/force-app/main/default/objects/TH_Recommendation__c/TH_Recommendation__c.object-meta.xml
<CustomObject>
    <label>Trailhead Recommendation</label>
    <nameField>
        <displayFormat>THR-{0000}</displayFormat>
        <label>THR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trailhead Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>