dx/force-app/main/default/objects/TH_Recommendation__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Badge</label>
    <referenceTo>trailheadapp__Badge__c</referenceTo>
    <relationshipLabel>Trailhead Recommendations</relationshipLabel>
    <relationshipName>Trailhead_Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>