dx/force-app/main/default/objects/TH_Recommendation__c/fields/Trailmix__c.field-meta.xml
<CustomField>
    <fullName>Trailmix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trailmix</label>
    <referenceTo>trailheadapp__Trailmix__c</referenceTo>
    <relationshipLabel>Trailhead Recommendations</relationshipLabel>
    <relationshipName>Trailhead_Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>